Fix ToC display for smaller viewports (alignment)

--- a/assets/sass/jena.scss
+++ b/assets/sass/jena.scss
@@ -72,26 +72,45 @@ main {
       max-width: 100%;
     }
   }
-  aside.d-xl-flex {
-    width: 17rem;
-    border-left: 1px solid var(--bs-secondary-bg);
+  aside {
+    &.d-xl-flex {
+      width: 17rem;
+      border-left: 1px solid var(--bs-secondary-bg);
+      overflow-y: scroll;
+      max-height: 100vh;
+      h2 {
+        margin-left: 1rem;
+        background-color: var(--bs-body-bg);
+      }
+      nav {
+        ul {
+          padding: 0 0 0 1rem;
+        }
+      }
+    }
+    &.d-xl-none {
+      nav {
+        ul {
+          padding: 0;
+          li {
+            ul {
+              padding: 0 0 0 1rem;
+            }
+          }
+        }
+      }
+    }
     /* The top dropdown menu has the Bootstrap default z-index of 1000.
      * The sticky-top that we use in the aside element gets a z-index of
      * 1020 from Bootstrap, causing the menu to be under this sidebar.
      * This value fixes that.
      */
-    overflow-y: scroll;
-    max-height: 100vh;
     z-index: 999;
-    h2 {
-      margin-left: 1rem;
-      background-color: var(--bs-body-bg);
-    }
+
     nav {
       margin-top: 0.5rem;
       ul {
         list-style: none;
-        padding: 0 0 0 1rem;
         margin: 0;
       }
     }
